--- a/app/globals.css
+++ b/app/globals.css
@@ -6,9 +6,10 @@
   margin: 0;
   padding: 0;
   box-sizing: border-box;
-  font-family: monospace;
 }
-
+body{
+  background-color: black;
+}
 html {
   scroll-behavior: smooth;
 }
